--- a/index.css
+++ b/index.css
@@ -1,3 +1,55 @@
-#child2{
-    color: red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 3px solid black;
+    height: 200px;
+}
+
+
+.logo{
+    width: 200px;
+}
+
+
+.nav-items{
+    padding: 30px 5px;
+}
+
+.nav-items > ul {
+    font-size: 24px;
+    display: flex;
+    list-style-type: none;
+}
+
+.nav-items >ul >li{
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.res-card{
+    margin: 20px;
+    padding: 5px;
+    width: 250px;
+    background-color: #f0f0f0;
+}
+
+.res-card:hover{
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+
+.search{
+    padding: 10px;
+}
+
+.res-logo{
+    width: 100%;
+    height: 250px;
 }
