--- a/index.css
+++ b/index.css
@@ -58,3 +58,24 @@
     margin: 10px;
     cursor: pointer;
 }
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card{
+    width: 250px;
+    height: 400px;
+    background-color: #f0f0f0;
+    margin: 20px;
+}
+
+.login{
+    padding: 0px 20px;
+    cursor: pointer;
+}
+
+.filter{
+    display: flex;
+}
