--- a/index.css
+++ b/index.css
@@ -12,6 +12,11 @@
 
 .logo{
     width: 200px;
+    height : 193px;
+    margin-top: 2px;
+    margin-left: 10px;
+    border: 2px solid black;
+    border-radius: 180px;
 }
 
 
@@ -56,11 +61,13 @@
 .res-logo{
     width: 100%;
     height: 250px;
+    border-radius: 10px;
 }
 
 .filter-btn{
     margin: 10px;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .shimmer-container{
@@ -78,9 +85,15 @@
 .login{
     padding: 0px 20px;
     cursor: pointer;
-    background-color: #e7c787;
+    border-radius: 25px;
 }
 
 .filter{
     display: flex;
+}
+
+.user-card{
+    padding: 10px;
+    border: 1px solid black;
+    width:fit-content;
 }
