--- a/index.css
+++ b/index.css
@@ -1,4 +1,10 @@
-.header{
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* .header{
     display: flex;
     justify-content: space-between;
     border: 3px solid black;
@@ -96,4 +102,5 @@
     padding: 10px;
     border: 1px solid black;
     width:fit-content;
-}
+} */
+
